load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generateKeys.go",
        "root.go",
        "uploadSecrets.go",
        "uploadTarget.go",
    ],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//ctc_lib:go_default_library",
        "//tuf/config:go_default_library",
        "//tuf/kms_lib:go_default_library",
        "//tuf/server:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)
