load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kms_lib.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/kms_lib",
    visibility = ["//visibility:public"],
    deps = [
        "//tuf/config:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/cloudkms/v1:go_default_library",
    ],
)
