load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/server",
    visibility = ["//visibility:public"],
    deps = [
        "//tuf/config:go_default_library",
        "//tuf/gcs_lib:go_default_library",
        "//tuf/kms_lib:go_default_library",
    ],
)
