load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/GoogleCloudPlatform/runtimes-common/tuf/server",
    visibility = ["//visibility:public"],
    deps = [
        "//tuf/config:go_default_library",
        "//tuf/gcsLib:go_default_library",
        "//tuf/kmsLib:go_default_library",
        "//tuf/metadata/v1:go_default_library",
        "//vendor/cloud.google.com/go/storage:go_default_library",
    ],
)
